--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <img src="./Assets/Spense.png" alt="">
                     </div>
                     <div class="project-title">
-                        <a href="#!"><h2>Spense.com <i>-></i></h2></a>
+                        <a href="#!"><h2>Spense.com <i>&#8594;</i></h2></a>
                     </div>
                     <div class="project-desc">
                         <p>Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing, and less on when and how they'll get paid. Project in collaboration with Codewell.cc</p>
@@ -81,7 +81,7 @@
                         <img src="./Assets/YelpCamp.png" alt="">
                     </div>
                     <div class="project-title">
-                        <a href="#!"><h2>YelpCamp.com <i>-></i></h2></a>
+                        <a href="#!"><h2>YelpCamp.com <i>&#8594;</i></h2></a>
                     </div>
                     <div class="project-desc">
                         <p>Allowing backpack travelers to perfectly plan their trip through an open-source platform similar to TripAdvisor. With over 1m MAU, YelpCamp has been the crowds favorite in 2021.</p>
